instruction to fix perm gen error