@@ -18,3 +18,5 @@ To get started, please complete the following steps:
 
 2. Run "mvn jetty:run-war" and view the application at http://localhost:8080.
 
+3. add in jvm property next values: -Xms256m -Xmx512m -XX:MaxPermSize=256m;
+
